--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,22 +1,25 @@
 [versions]
 maven-group = "band.kessokuteatime"
-archives-name = "modid"
+archives-name = "nightautoconfig"
 mod = "1.0.0"
 loader = "fabric"
 
-minecraft = "1.20"
-yarn = "1.20+build.1"
+minecraft = "1.18"
+yarn = "1.18+build.1"
 fabric-loader = "0.15.10"
-fabric-api = "0.83.0+1.20"
+fabric-api = "0.44.0+1.18"
 fabric-loom = "1.6-SNAPSHOT"
 modpublisher = "2.1.0"
+
+cloth-config = "6.5.116"
+night-config = "3.6.0"
 
 # id
 id-modrinth = "id"
 id-curseforge = "id"
 
 # display
-display-name = "Example"
+display-name = "Night Auto Config"
 display-loader = "Fabric"
 display-version = "1.20.x"
 
@@ -26,9 +29,17 @@ yarn = { group = "net.fabricmc", name = "yarn", version.ref = "yarn" }
 fabric-loader = { group = "net.fabricmc", name = "fabric-loader", version.ref = "fabric-loader" }
 fabric-api = { group = "net.fabricmc.fabric-api", name = "fabric-api", version.ref = "fabric-api" }
 
+cloth-config = { group = "me.shedaniel.cloth", name = "cloth-config-fabric", version.ref = "cloth-config" }
+
+night-config-json = { group = "com.electronwill.night-config", name = "json", version.ref = "night-config" }
+night-config-toml = { group = "com.electronwill.night-config", name = "toml", version.ref = "night-config" }
+night-config-hocon = { group = "com.electronwill.night-config", name = "hocon", version.ref = "night-config" }
+night-config-yaml = { group = "com.electronwill.night-config", name = "yaml", version.ref = "night-config" }
+
 [plugins]
 fabric-loom = { id = "fabric-loom", version.ref = "fabric-loom" }
 modpublisher = { id = "com.hypherionmc.modutils.modpublisher", version.ref = "modpublisher" }
 
 [bundles]
 fabric = ["fabric-loader", "fabric-api"]
+night-config = ["night-config-json", "night-config-toml", "night-config-hocon", "night-config-yaml"]
