--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,10 +4,10 @@ archives-name = "nightautoconfig"
 mod = "1.0.0"
 loader = "fabric"
 
-minecraft = "1.18"
-yarn = "1.18+build.1"
+minecraft = "1.18.1"
+yarn = "1.18.1+build.22"
 fabric-loader = "0.15.10"
-fabric-api = "0.44.0+1.18"
+fabric-api = "0.46.6+1.18"
 fabric-loom = "1.6-SNAPSHOT"
 modpublisher = "2.1.0"
 
@@ -21,7 +21,7 @@ id-curseforge = "id"
 # display
 display-name = "Night Auto Config"
 display-loader = "Fabric"
-display-version = "1.20.x"
+display-version = "1.18.1+"
 
 [libraries]
 minecraft = { group = "com.mojang", name = "minecraft", version.ref = "minecraft" }
