--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,17 +1,17 @@
 [versions]
 maven-group = "band.kessokuteatime"
 archives-name = "nightautoconfig"
-mod = "1.0.1"
+mod = "1.0.2"
 loader = "fabric"
 
-minecraft = "1.21"
-yarn = "1.21+build.7"
+minecraft = "1.20"
+yarn = "1.20+build.1"
 fabric-loader = "0.15.11"
-fabric-api = "0.100.4+1.21"
+fabric-api = "0.83.0+1.20"
 fabric-loom = "1.6-SNAPSHOT"
 modpublisher = "2.1.0"
 
-cloth-config = "15.0.127"
+cloth-config = "11.1.118"
 night-config = "3.8.0"
 
 # id
@@ -21,7 +21,7 @@ id-curseforge = "1061154"
 # display
 display-name = "Night Auto Config"
 display-loader = "Fabric"
-display-version = "1.21+"
+display-version = "1.20.x"
 
 [libraries]
 minecraft = { group = "com.mojang", name = "minecraft", version.ref = "minecraft" }
