--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,7 +15,7 @@ cloth-config = "15.0.127"
 night-config = "3.8.0"
 
 # id
-id-modrinth = "night-auto-config"
+id-modrinth = "HQpcCFZg"
 id-curseforge = "1061154"
 
 # display
