--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 maven-group = "band.kessokuteatime"
 archives-name = "nightautoconfig"
-mod = "1.0.3"
+mod = "1.0.4"
 loader = "fabric"
 
 minecraft = "1.20"
@@ -31,6 +31,7 @@ fabric-api = { group = "net.fabricmc.fabric-api", name = "fabric-api", version.r
 
 cloth-config = { group = "me.shedaniel.cloth", name = "cloth-config-fabric", version.ref = "cloth-config" }
 
+night-config-core = { group = "com.electronwill.night-config", name = "core", version.ref = "night-config" }
 night-config-json = { group = "com.electronwill.night-config", name = "json", version.ref = "night-config" }
 night-config-toml = { group = "com.electronwill.night-config", name = "toml", version.ref = "night-config" }
 night-config-hocon = { group = "com.electronwill.night-config", name = "hocon", version.ref = "night-config" }
@@ -42,4 +43,4 @@ modpublisher = { id = "com.hypherionmc.modutils.modpublisher", version.ref = "mo
 
 [bundles]
 fabric = ["fabric-loader", "fabric-api"]
-night-config = ["night-config-json", "night-config-toml", "night-config-hocon", "night-config-yaml"]
+night-config = ["night-config-core", "night-config-json", "night-config-toml", "night-config-hocon", "night-config-yaml"]
