--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,16 +2,16 @@
 maven-group = "band.kessokuteatime"
 archives-name = "nightautoconfig"
 mod = "1.0.6"
-loader = "fabric"
+loader = "neoforge"
 
-minecraft = "1.20"
-yarn = "1.20+build.1"
-fabric-loader = "0.15.11"
-fabric-api = "0.83.0+1.20"
-fabric-loom = "1.6-SNAPSHOT"
+minecraft = "1.20.4"
+yarn = "1.20.4+build.3"
+neoforge = "20.4.237"
+architectury-loom = "1.6-SNAPSHOT"
 modpublisher = "2.1.0"
+shadow = "8.+"
 
-cloth-config = "11.1.118"
+cloth-config = "13.0.121"
 night-config = "3.8.0"
 
 # id
@@ -20,16 +20,15 @@ id-curseforge = "1061154"
 
 # display
 display-name = "Night Auto Config"
-display-loader = "Fabric"
-display-version = "1.20.x"
+display-loader = "NeoForge"
+display-version = "1.20.2~1.20.4"
 
 [libraries]
 minecraft = { group = "com.mojang", name = "minecraft", version.ref = "minecraft" }
 yarn = { group = "net.fabricmc", name = "yarn", version.ref = "yarn" }
-fabric-loader = { group = "net.fabricmc", name = "fabric-loader", version.ref = "fabric-loader" }
-fabric-api = { group = "net.fabricmc.fabric-api", name = "fabric-api", version.ref = "fabric-api" }
+neoforge = { group = "net.neoforged", name = "neoforge", version.ref = "neoforge" }
 
-cloth-config = { group = "me.shedaniel.cloth", name = "cloth-config-fabric", version.ref = "cloth-config" }
+cloth-config = { group = "me.shedaniel.cloth", name = "cloth-config-neoforge", version.ref = "cloth-config" }
 
 night-config-core = { group = "com.electronwill.night-config", name = "core", version.ref = "night-config" }
 night-config-json = { group = "com.electronwill.night-config", name = "json", version.ref = "night-config" }
@@ -38,9 +37,9 @@ night-config-hocon = { group = "com.electronwill.night-config", name = "hocon", 
 night-config-yaml = { group = "com.electronwill.night-config", name = "yaml", version.ref = "night-config" }
 
 [plugins]
-fabric-loom = { id = "fabric-loom", version.ref = "fabric-loom" }
+architectury-loom = { id = "dev.architectury.loom", version.ref = "architectury-loom" }
 modpublisher = { id = "com.hypherionmc.modutils.modpublisher", version.ref = "modpublisher" }
+shadow = { id = "com.github.johnrengelman.shadow", version.ref = "shadow" }
 
 [bundles]
-fabric = ["fabric-loader", "fabric-api"]
 night-config = ["night-config-core", "night-config-json", "night-config-toml", "night-config-hocon", "night-config-yaml"]
