--- a/src/main/resources/META-INF/neoforge.mods.toml
+++ b/src/main/resources/META-INF/neoforge.mods.toml
@@ -11,25 +11,25 @@ authors = "Kessoku Tea Time"
 description = '''
 Serialize everything! Night Config integration for Auto Config.
 '''
-#logoFile = "assets/nightautoconfig/icon.png"
+logoFile = "assets/nightautoconfig/icon.png"
 
 [[dependencies.nightautoconfig]]
 modId = "neoforge"
 type = "required"
-versionRange = "[20.2,)"
+versionRange = "[20.5,20.6]"
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.nightautoconfig]]
 modId = "minecraft"
 type = "required"
-versionRange = "[1.20.2,)"
+versionRange = "[1.20.5,1.20.6]"
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.nightautoconfig]]
 modId = "cloth_config"
 type = "required"
-versionRange = "[10,)"
+versionRange = "[12,)"
 ordering = "NONE"
 side = "BOTH"
