--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -11,7 +11,7 @@ authors = "Kessoku Tea Time"
 description = '''
 Serialize everything! Night Config integration for Auto Config.
 '''
-#logoFile = "assets/nightautoconfig/icon.png"
+logoFile = "assets/nightautoconfig/icon.png"
 
 [[dependencies.nightautoconfig]]
 modId = "neoforge"
