--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,7 @@ yarn = "1.21+build.7"
 yarn-patch = "1.21+build.4"
 neoforge = "21.0.109-beta"
 architectury-loom = "1.6-SNAPSHOT"
-modpublisher = "2.1.0"
+modpublisher = "2.+"
 shadow = "8.+"
 
 cloth-config = "15.0.127"
