--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 maven-group = "band.kessokuteatime"
 archives-name = "nightautoconfig"
-mod = "1.1.0"
+mod = "1.1.0-alpha.2"
 loader = "fabric"
 
 minecraft = "1.21"
